--- a/packages/components/tsconfig.json
+++ b/packages/components/tsconfig.json
@@ -6,11 +6,13 @@
     "outDir": "dist",
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
+    "allowJs": true,
+    "allowSyntheticDefaultImports": true,
     "strict": true,
     "skipLibCheck": true,
     "declaration": true,
     "sourceMap": true,
-    "types": ["types/global.d.ts"],
+    "types": ["./types/global.d.ts"],
     "plugins": [{ "name": "" }]
   },
   "include": ["./src/*"],
