--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -2,7 +2,9 @@
   "name": "components",
   "version": "1.0.0",
   "description": "",
-  "main": "./dist/index.js",
+  "main": "./dist/index.mjs",
+  "type": "module",
+  "types": "./dist/index.d.ts",
   "scripts": {
     "tsc": "tsc",
     "build": "unbuild",
@@ -10,9 +12,11 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "exports": {
-    "import": "./dist/index.mjs",
-    "require": "./dist/index.cjs"
+    "import": "./dist/index.mjs"
   },
+  "files": [
+    "dist"
+  ],
   "keywords": [],
   "author": "",
   "license": "ISC",
