--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -1,6 +1,7 @@
 {
   "name": "docs",
   "type": "module",
+  "private": true,
   "version": "0.0.1",
   "scripts": {
     "predev": "astro sync",
@@ -17,7 +18,7 @@
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
     "astro": "^4.0.1",
-    "components": "workspace:*",
+    "catui": "workspace:*",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "sharp": "^0.32.5",
