fix: export components to other apps with self types

--- a/packages/catui/tsconfig.json
+++ b/packages/catui/tsconfig.json
@@ -1,21 +1,22 @@
 {
   "compilerOptions": {
-    "jsx": "react-jsx",
-    "target": "es2016",
-    "module": "commonjs",
-    "outDir": "dist",
-    "esModuleInterop": true,
-    "forceConsistentCasingInFileNames": true,
-    "allowJs": true,
-    "allowSyntheticDefaultImports": true,
-    "strict": true,
-    "skipLibCheck": true,
+    "target": "esnext",
+    "module": "esnext",
+    "lib": ["dom", "esnext", "ES2020", "DOM.Iterable"],
     "declaration": true,
     "sourceMap": true,
+    "moduleResolution": "node",
+    "strict": true,
+    "isolatedModules": true,
+    "noFallthroughCasesInSwitch": true,
+    "jsx": "react-jsx",
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
+    "downlevelIteration": true,
     "types": ["./types/global.d.ts"],
-    "plugins": [{ "name": "" }]
+    "plugins": [{ "name": "typescript-plugin-css-modules" }]
   },
-  "include": ["./src/*"],
+  "include": ["src"],
   "exclude": [
     "node_modules",
     "dist",
