--- a/packages/catui/package.json
+++ b/packages/catui/package.json
@@ -1,18 +1,24 @@
 {
   "name": "catui",
   "version": "1.0.0",
-  "description": "",
-  "main": "./dist/index.mjs",
   "type": "module",
-  "types": "./dist/index.d.ts",
+  "description": "",
+  "main": "dist/index.js",
+  "module": "dist/index.mjs",
+  "types": "dist/index.d.ts",
   "scripts": {
+    "dev": "node ./scripts/build.cjs",
     "tsc": "tsc",
     "build": "unbuild",
     "lun-cli": "lun-cli",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "exports": {
-    "import": "./dist/index.mjs"
+    ".": {
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.mjs",
+      "require": "./dist/index.js"
+    }
   },
   "files": [
     "dist"
@@ -27,6 +33,18 @@
   },
   "devDependencies": {
     "@types/react": "18.2.47",
+    "@typescript-eslint/eslint-plugin": "^6.14.0",
+    "@typescript-eslint/parser": "^6.14.0",
+    "chokidar": "3.5.3",
+    "eslint": "^8.55.0",
+    "eslint-config-prettier": "9.1.0",
+    "eslint-config-standard-with-typescript": "43.0.0",
+    "eslint-plugin-import": "2.29.1",
+    "eslint-plugin-n": "16.6.2",
+    "eslint-plugin-promise": "6.1.1",
+    "eslint-plugin-react": "7.33.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.5",
     "lun-cli": "2.4.3",
     "typescript": "5.3.3",
     "typescript-plugin-css-modules": "5.0.2",
