--- a/packages/catui/tsconfig.json
+++ b/packages/catui/tsconfig.json
@@ -14,6 +14,10 @@
     "allowSyntheticDefaultImports": true,
     "downlevelIteration": true,
     "types": ["./types/global.d.ts"],
+    "baseUrl": ".",
+    "paths": {
+      "@catui/*": ["src/*"]
+    },
     "plugins": [{ "name": "typescript-plugin-css-modules" }]
   },
   "include": ["src"],
