--- a/packages/catui/package.json
+++ b/packages/catui/package.json
@@ -49,10 +49,12 @@
     "@storybook/addon-links": "7.6.8",
     "@storybook/addon-onboarding": "1.0.10",
     "@storybook/blocks": "7.6.8",
+    "@storybook/manager-api": "7.6.9",
     "@storybook/preview-api": "7.6.8",
     "@storybook/react": "7.6.8",
     "@storybook/react-vite": "7.6.8",
     "@storybook/test": "7.6.8",
+    "@storybook/theming": "7.6.9",
     "@types/react": "18.2.47",
     "@types/react-dom": "18.2.17",
     "@typescript-eslint/eslint-plugin": "6.14.0",
