--- a/packages/catui/package.json
+++ b/packages/catui/package.json
@@ -49,6 +49,7 @@
     "@storybook/addon-links": "7.6.8",
     "@storybook/addon-onboarding": "1.0.10",
     "@storybook/blocks": "7.6.8",
+    "@storybook/builder-vite": "7.6.10",
     "@storybook/manager-api": "7.6.9",
     "@storybook/preview-api": "7.6.8",
     "@storybook/react": "7.6.8",
