feat(tooltip): done design to component and stories

--- a/packages/catui/package.json
+++ b/packages/catui/package.json
@@ -29,7 +29,8 @@
       "import": "./build/index.mjs",
       "require": "./build/index.js"
     },
-    "./styles/*": "./build/styles/*"
+    "./styles/*": "./build/styles/*",
+    "./hooks": "./build/hooks/index.mjs"
   },
   "files": [
     "build"
