--- a/packages/catui-design/package.json
+++ b/packages/catui-design/package.json
@@ -27,8 +27,7 @@
   "exports": {
     ".": {
       "types": "./build/index.d.ts",
-      "import": "./build/index.mjs",
-      "require": "./build/index.js"
+      "import": "./build/index.mjs"
     },
     "./styles/*": "./build/styles/*",
     "./hooks": "./build/hooks/index.mjs"
