--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -7,7 +7,7 @@
     "predev": "astro sync",
     "dev": "astro dev",
     "start": "astro dev",
-    "build": "astro check && astro build",
+    "build": "rm -rf dist && astro check && astro build",
     "preview": "astro preview",
     "astro": "astro"
   },
